deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
      - path: /clientes
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
      - path: /itens
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
      - path: /pedidos
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
      - path: /notificacao
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
      - path: /pagamento
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 8080
